--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-cloud.name=<<ddcqpybk7>>
-cloud.secret=<<dwT_OeHf28QeCpaIHrPOdwCt7TY>>
-cloud.key=<<456344675844196>>
+cloud.name=ddcqpybk7
+cloud.secret=dwT_OeHf28QeCpaIHrPOdwCt7TY
+cloud.key=456344675844196
 
 spring.h2.console.path=/h2-console
 spring.h2.console.enabled=true
