--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
 			<artifactId>cloudinary-http44</artifactId>
 			<version>1.2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>0.4-1201-jdbc4</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
