--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,12 @@ cloud.name=ddcqpybk7
 cloud.secret=dwT_OeHf28QeCpaIHrPOdwCt7TY
 cloud.key=456344675844196
 
-spring.h2.console.path=/h2-console
-spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
+# spring.h2.console.enabled=true
+
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.show-sql=false
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
